tests/compile-fail/syntax_error.stderr
error: expected one of "#", "inject", "pub", "rule", "use", "}"
 --> tests/compile-fail/syntax_error.rs:4:5
  |
4 |     fn asdf() {} //~ ERROR expected one of "#", "inject", "crate", "pub", "rule", "use", "}"
  |     ^^
